
Please add newer entries at the top, list the date and your name with
email address.

2008-Feb-29 UPDATE Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+eeschema
	Renaming the sheet filename now works in simple and complex hierarchies.
	Use carefully because this can change the whole schematic structure.

+all
	Display filename and full sheet name ("sheet path") in sheet reference
	the full sheet name has no meanning in pcbnew.


2008-Feb-28 UPDATE Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+eeschema
	Fixed: problem which could crash eeschema when a sub schematic file in a hierarchy was not found.


2008-Feb-27 UPDATE  Wayne Stambaugh <stambaughw{at}verizon{dot}net>
================================================================================
+ eeschema
  * fixed escape key handling and add accelerate keys in annotate dialog.
  * factored out eeschema frame class to prevent rebuild of entire project
    when making changes to eeschema frames.
  * refactor main eeschema event loop by factoring out most of the non-drawing
    events.
+ cmake
  * small fix to root CMakeList file to prevent GCC flags being used with
    other compilers.


2008-Feb-26 UPDATE Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+eeschema
	changed in class DrawSheetStruct m_s member name to m_AssociatedScreen
	some others minor problems solved.
	some files "uncrustified"
	Major problem in undo/redo when a sheet is deleted not yet solved
	Only for a complex hierarchy, could lost data.
	When a sheet is deleted by block delete. it is put in undo list.
	It is really deleted after 10 changes (when the undo list is full).
	At this time, the associated data is also deleted.
	If an other (not deleted) sheet shares the same data, this data is lost.